# quadcd

./: .gitignore  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
ci-tools/: Cargo.toml
scripts/: run-containerized-tests.sh
src/: app.rs  cd_config.rs  cli.rs  config.rs  dryrun.rs  generator.rs  install.rs  lib.rs  main.rs  output.rs
src/sync/: cmd.rs  image.rs  mod.rs  podman.rs  repo.rs  runner.rs  systemd.rs  units.rs  vcs.rs
tests/: app.rs  cli.rs  config.rs  dryrun.rs  fake_podman.rs  fake_systemd.rs  git_vcs.rs  install.rs  install_script.rs  sync_runner.rs
tests/common/: mod.rs
tests/containerized/: config_resilience.rs  generate.rs  helpers.rs  main.rs  prepull.rs  sync.rs
tests/containerized/image/: Containerfile  quadcd-safety.service  quadcd-safety.timer  quadcd-test.service  run-test.sh
tests/containerized/image/test-sources/: hello.container
tests/fixtures/: fake_cmd.sh
